--- a/web/static/style.css
+++ b/web/static/style.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     height: 100vh;
+    margin: 0;
 }
 
 .container {
@@ -39,7 +40,8 @@ body {
     display: grid;
     grid-template-columns: auto auto auto auto;
     gap: 7px;
-    height: auto;
+    overflow-y: scroll;
+    height: 90%;
     
 }
 
